# GeNT

./: .gitignore  TODO.md  arch.md  build.zig  linker.lds  readme.md  run.sh
Kernel/: init.md  lockdown.md  trap.md
Kernel/events/: events.md
Kernel/isa/riscv64/: trap.md
Kernel/isa/x86_64/: trap.md
Kernel/memory/: phys_mem.md  virt_mem.md
Other/: other.md
Other/filesystems/: filesystems.md  opfs.md  procfs.md
SAPLings/: lang.md
Userspace/: IPC.md  RDL.md  io.md  syscalls.md
Userspace/events/: events.md  faults.md
Userspace/threads/: cached.md
config/: limine.cfg
kernel/: Cargo.toml  build.rs  lai-bindgen.h  linker.lds
kernel/src/: lib.rs  main.rs  uart.rs
kernel/src/acpi/: mod.rs
kernel/src/acpi/tables/: madt.rs  mod.rs
kernel/src/allocator/: mod.rs  vmem_alloc.rs
kernel/src/arch/: mod.rs
kernel/src/arch/global/: mod.rs  trap.rs
kernel/src/arch/riscv64/: boot.rs  csr.rs  mem.rs  mod.rs  paging.rs  timer.rs  transit.rs  trap.rs  utils.rs
kernel/src/cpu/: mod.rs
kernel/src/dev/: aplic.rs  mod.rs  uart.rs
kernel/src/dev/blockdev/: mod.rs
kernel/src/dev/blockdev/gpt/: mod.rs  structs.rs
kernel/src/dev/blockdev/ramdisk/: mod.rs
kernel/src/dev/virtio/: mod.rs
kernel/src/dev/window/: mod.rs
kernel/src/mem/: linker.rs  mod.rs  swap.rs  tls.rs
kernel/src/scheduler/: mod.rs
src/: kstdout.zig  lock.zig  main.zig
src/alloc/: alloc.zig  scudo.zig
src/alloc/vmem/: alloc_table.zig  seg_list.zig  vmem.zig
src/arch/: arch.zig
src/arch/riscv/: csr.zig  entry.s  time.zig
src/crypto/: crypto.zig
src/crypto/rng/: rng.zig  (+1 more)
(+5 files in other folders)
