[package]
name = "gent-kern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linked_list_allocator = "0.10.5"
spin = "0.9"
#acpi = "5.0.0"
#aml = "0.16.4"
#rsdp = "2.0.0"
elf = { version = "0.7.2", default-features = false}
bitfield = "0.14.0"
bitflags = "2.2.1"
libsa = { git = "https://github.com/bolt-os/libsa" }
log = "0.4.14"
lai = { git = "https://github.com/archaic-archea/lai-rs", branch = "many-things" }
gimli = { version = "0.28.0", default-features = false}
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"]}
linkset = { git = "https://github.com/xvanc/linkset.git", default-features = false }

[dependencies.limine]
git = "https://github.com/bolt-os/limine-rs"

[dependencies.vmem]
git = "https://github.com/archaic-archea/vmem.git"
features = ["log"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = "0.68.1"

[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi = "0.2.0"